--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,32 @@
   </head>
 
   <body>
+    <div class="navbar-wagon">
+      <!-- Logo -->
+      <a href="/restaurants" class="navbar-wagon-brand">
+        <img src="images/logo.png" alt="Home">
+      </a>
+
+      <!-- Right Navigation -->
+      <div class="navbar-wagon-right hidden-xs hidden-sm">
+
+        <a href="/restaurants/index" class="navbar-wagon-item navbar-wagon-link">Restaurants</a>
+        <a href="/restaurants/new" class="navbar-wagon-item navbar-wagon-link">Create new Restaurant</a>
+      </div>
+
+      <!-- Dropdown appearing on mobile only -->
+      <div class="navbar-wagon-item hidden-md hidden-lg">
+        <div class="dropdown">
+          <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li><a href="/restaurants/index">Restaurants</a></li>
+            <li><a href="/restaurants/new">Create new Restaurant</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <%= yield %>
+
   </body>
 </html>
